[package]
name = "core_pbd"
version = "0.1.0"
edition = "2021"

[lib]
name = "core_pbd"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
hecs = "0.10"
glam = "0.24"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "dead_world"
harness = false
