[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "fishtank_ui"
version = "0.1.0"
description = "A ModernGL visualizer for the Volumetric JLSM Engine"
requires-python = ">=3.8"
dependencies = [
    "moderngl>=2.4.0",
    "pygame-ce>=2.4.0",
    "numpy>=1.24.0"
]
